# course-sniper

./: .gitignore  README.md  bot.py  clsretrieval.py  config.py  config_loader.py  pyproject.toml  snyper.py
